--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#689F38</color>
+    <color name="colorPrimaryDark">#689F38</color>
+    <color name="colorAccent">#689F38</color>
+    <color name="background">#121212</color>
+    <color name="tileBackground">#2f2f2f</color>
 </resources>
