--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="outputHours"
+        android:text="@string/outputHours"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -73,7 +73,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
-        android:text="outputMinutes"
+        android:text="@string/outputMinutes"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/outputHours"
         app:layout_constraintHorizontal_bias="0.498"
@@ -87,7 +87,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
-        android:text="outputSeconds"
+        android:text="@string/outputSeconds"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/outputMinutes"
         app:layout_constraintHorizontal_bias="0.498"
@@ -123,7 +123,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userSpeed" />
+        app:layout_constraintTop_toBottomOf="@+id/userSpeed"/>
 
     <EditText
         android:id="@+id/userSize"
